--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -167,6 +167,9 @@
                                             <li>
                                                 <a   data-toggle="collapse" href="#Infogae">Infoga Email  <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
                                             </li>
+                                            <li>
+                                                <a   data-toggle="collapse" href="#sublist3r"> Sublist3r <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -897,7 +900,56 @@
                     </div>
                 </div>
             </div>
+<div class="col-5">
+                <div class="panel panel-sidebar">
+                    <div class="panel-heading">
+                        <a   data-toggle="collapse"  href="#sublist3r">
+                            <strong>
+                                 SUBLIST3R
+                            </strong>
+                            <span class="caret"></span>
+                        </a>
+                    </div>
+                    <div class="collapse " id="sublist3r">
+                        <div class="panel-body ">
 
+                            <table class="table">
+                                <div class="method">
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                Nome
+                                            </th>
+                                            <th>
+                                                Comando
+                                            </th>
+
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                </div>
+                                <tbody>
+                                    @foreach (var item in Model.ModuliSUBLIST3R) { 
+                                    <tr>
+                                        <td>
+                                           <a asp-action="Details" asp-route-id="@item.ID"> @Html.DisplayFor(modelItem => item.Nome)</a> 
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Comando)
+                                        </td>
+                                        <td>
+                                            <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
+                                            <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
+                                        </td>
+                                    </tr>
+                                    }
+                                </tbody>
+                            </table>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
           <div class="panel panel-default">
                     <div class="panel-heading">
