--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -64,12 +64,6 @@
                                 </div>
                                 
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                    <input type="checkbox" name="selezionaTutto1" onclick="SelezTT1()" > <label> Scegli tutti</label><br>
-                                        </td>
-                                    </tr>
-                                    
                                     @foreach (var item in listaModuli) {
                                        
                                         
@@ -129,11 +123,6 @@
                                     </thead>
                                 </div>
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                    <input type="checkbox" name="selezionaTutto2" onclick="SelezTT2()" > <label> Scegli tutti</label><br>
-                                        </td>
-                                    </tr>
                                     @foreach (var item in listaModuli) {
                                         
                                         
@@ -192,11 +181,6 @@
                                     </thead>
                                 </div>
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                    <input type="checkbox" name="selezionaTutto3" onclick="SelezTT3()" > <label> Scegli tutti</label><br>
-                                        </td>
-                                    </tr>
                                     @foreach (var item in listaModuli) {
                                         
                                         var tipo = item.GetType(); 
@@ -267,11 +251,6 @@
                                     </thead>
                                 </div>
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                    <input type="checkbox" name="selezionaTutto1" onclick="SelezTT1()" > <label> Scegli tutti</label><br>
-                                        </td>
-                                    </tr>
                                     @foreach (var item in listaModuli) {
                                        
                                         
@@ -331,11 +310,6 @@
                                     </thead>
                                 </div>
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                    <input type="checkbox" name="selezionaTutto1" onclick="SelezTT1()" > <label> Scegli tutti</label><br>
-                                        </td>
-                                    </tr>
                                     @foreach (var item in listaModuli) {
                                        
                                         
@@ -409,11 +383,6 @@
                                     </thead>
                                 </div>
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                    <input type="checkbox" name="selezionaTutto1" onclick="SelezTT1()" > <label> Scegli tutti</label><br>
-                                        </td>
-                                    </tr>
                                     @foreach (var item in listaModuli) {
                                        
                                         
@@ -477,11 +446,6 @@
                                     </thead>
                                 </div>
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                    <input type="checkbox" name="selezionaTutto1" onclick="SelezTT1()" > <label> Scegli tutti</label><br>
-                                        </td>
-                                    </tr>
                                     @foreach (var item in listaModuli) {
                                        
                                         
@@ -545,11 +509,6 @@
                                     </thead>
                                 </div>
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                    <input type="checkbox" name="selezionaTutto1" onclick="SelezTT1()" > <label> Scegli tutti</label><br>
-                                        </td>
-                                    </tr>
                                     @foreach (var item in listaModuli) {
                                        
                                         
@@ -622,11 +581,6 @@
                                     </thead>
                                 </div>
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                    <input type="checkbox" name="selezionaTutto1" onclick="SelezTT1()" > <label> Scegli tutti</label><br>
-                                        </td>
-                                    </tr>
                                     @foreach (var item in listaModuli) {
                                        
                                         
@@ -689,11 +643,6 @@
                                     </thead>
                                 </div>
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                    <input type="checkbox" name="selezionaTutto1" onclick="SelezTT1()" > <label> Scegli tutti</label><br>
-                                        </td>
-                                    </tr>
                                     @foreach (var item in listaModuli) {
                                        
                                         
@@ -765,12 +714,6 @@
                                         </tr>
                                     </thead>
                                 </div>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                    <input type="checkbox" name="selezionaTutto1" onclick="SelezTT1()" > <label> Scegli tutti</label><br>
-                                        </td>
-                                    </tr>
                                     @foreach (var item in listaModuli) {
                                        
                                         
@@ -831,11 +774,6 @@
                                     </thead>
                                 </div>
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                    <input type="checkbox" name="selezionaTutto1" onclick="SelezTT1()" > <label> Scegli tutti</label><br>
-                                        </td>
-                                    </tr>
                                     @foreach (var item in listaModuli) {
                                        
                                         
@@ -862,6 +800,69 @@
                         </div>
                         </div>
                       </div>
+                       <div class="panel panel-sidebar">
+                    <div class="panel-heading">
+                    <a data-toggle="collapse"  href="#sublist3r">
+                    <strong>
+                                SUBLIST3R
+                            </strong>
+                            <span class="caret"></span>
+                        </a>
+                    </div>
+                    <div class="collapse " id="sublist3r">
+                     <div class="panel-body ">
+                     <div class="col-sm-7">
+                                        <div class="form-group">
+                                            <h4 asp-for="@Model.Target">Dominio</h4><hr/>
+                                            <input class="form-control" asp-for="@Model.Target" />
+                                        </div>
+                                    </div><br>
+                                    <div class="col-sm-12">
+                                     <h4>Seleziona i moduli SUBLIST3R</h4><hr/>
+                                    </div>
+                            <table class="table">
+                                <div class="method">
+                                    <thead>
+                                        <tr>
+                                            <th></th>
+                                             <th>
+                                        Nome
+                                            </th>
+                                            <th>
+                                        Comando
+                                            </th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                </div>
+                                <tbody>
+                                    
+                                    @foreach (var item in listaModuli) {
+                                       
+                                        
+                                            if(item.Applicazione!= webmva.Models.APPLICAZIONE.SUBLIST3R){continue;}
+                                             <tr>
+                                                <td>
+                                                    <input type="checkbox"
+                                                        name="moduliSelezionati"
+                                                        value="@item.ModuloID"
+                                                        @(Html.Raw(item.Inserito ? "checked=\"checked\"" : "")) />
+                                                        
+                                                </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Nome)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.Comando)
+                                                </td>
+                                            </tr>       
+                                    }
+                                </tbody>
+                            </table>
+
+                        </div>
+                        </div>
+                        </div>
                       </div>
                      <div class="panel panel-default">
                     <div class="panel-heading">
